Initial WoL release
Change-type: major
